# ss-ext

./: .env.example  .gitignore  CMakeLists.txt  README.md  auto_updater.py  baslat.bat  build_exe.bat  config.py  durdur.bat  gamesense_client.py  gizli_baslat.vbs  i18n.py  install.bat  intro_animation.py  kur.bat  main.py  requirements.txt  settings.bat  settings_store.py  settings_ui.py  start.bat  start_hidden.vbs  startup_manager.py  stop.bat  stop_graceful.py  system_monitor.py  tray_mode.py
.github/workflows/: build-windows.yml
data/: known_games.txt
installer/: ss-ext.iss
resources/: carex-ext.rc
scripts/: clean_history.sh
src/: App.cpp  App.hpp  Config.cpp  Config.hpp  GameSenseClient.cpp  GameSenseClient.hpp  I18n.cpp  I18n.hpp  Logger.cpp  Logger.hpp  PathUtils.cpp  PathUtils.hpp  main.cpp
src/diagnostics/: CrashHandler.cpp  CrashHandler.hpp  Doctor.cpp  Doctor.hpp
src/monitor/: EmailMonitor.cpp  EmailMonitor.hpp  GameMonitor.cpp  GameMonitor.hpp  NotificationMonitor.cpp  NotificationMonitor.hpp  SpotifyMonitor.cpp  SpotifyMonitor.hpp  TemperatureMonitor.cpp  TemperatureMonitor.hpp  VolumeMonitor.cpp  VolumeMonitor.hpp
src/security/: CredentialStore.cpp  CredentialStore.hpp  SSFileHash.cpp  SSFileHash.hpp
src/startup/: ProcessLauncher.cpp  ProcessLauncher.hpp  StartupManager.cpp  StartupManager.hpp
src/ui/: TrayController.cpp  TrayController.hpp
src/update/: UpdateChecker.cpp  UpdateChecker.hpp  UpdaterMain.cpp
workflows/: windows_build.yml
